# rust-static-file-server

./: Cargo.toml  LICENSE  README.md  com.rust.rust-static-file-server.plist  com.user.clipboardmonitor.plist
shellscripts/: clipboard_monitor.sh
src/: main.rs
