[package]
name = "rust-static-file-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"